fix nav issue on small screens

--- a/portfolio/src/components/styleNavTabs.css
+++ b/portfolio/src/components/styleNavTabs.css
@@ -28,3 +28,10 @@
     color: var(--beige);
     opacity: 0.8;
 }
+
+@media screen and (max-width: 1000px) {
+    .nav {
+        max-width: 100%;
+        max-height: 40px;
+    }
+}
